feat: update index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,151 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
+
+
 <head>
+
     <meta charset="utf-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
+
     <title>CV</title>
+
+
+
 </head>
+
+
+
 <body>
-    <h1 class="titleCenter">Raman Bashkirau CV.</h1>
+
+    <header>
+
+        <h1 class="titleCenter">Raman Bashkirau CV.</h1>
+
+        <img class="displayed" src="https://media.licdn.com/dms/image/C4E03AQGS1-XIV--Keg/profile-displayphoto-shrink_800_800/0/1624825744340?e=1677110400&v=beta&t=vjLXphtxhnsqvvhei5FSYymS0xeSK8jwQ6MJVhb0T3w" alt="Hex!">
+
+    </header>
+
+    <nav>
+
+        <a href="https://Rombas.github.io/rsschool-cv/cv">HTML CV</a> | <a href="https://Rombas.github.io/rsschool-cv">Mardown CS</a>
+
+    </nav>
+
+    <main>
+
+        <ol class="center">
+
+            <li>
+
+                <h2>Name and Surname.</h2>
+
+                <p>Raman Bashkirau.</p>
+
+            </li>
+
+            <li>
+
+                <h2>Contacts for communication.</h2>
+
+                <ul>
+
+                    <li>Location: Minsk, Belarus</li>
+
+                    <li>+ 375 (29) 235-26-84</li>
+
+                    <li>Email: <a href="mailto:RomanBash@gmail.com">RomanBash@gmail.com</a></li>
+
+                    <li>LinkedIn: <a href="https://www.linkedin.com/in/roman-bashkirau-291a9b215/">Raman Bashkirau</a></li>
+
+                </ul>
+
+            </li>
+
+            <li>
+
+                <h2>Information.</h2>
+
+                <p>My <b>goals</b> and <b>priorities</b>: realize my possibilities and abilities in programming, help our
+
+                    country to enter a new era of information technology. </p>
+
+                <p>My <b>strengths</b>: smart, resourceful, hungry.</p>
+
+                <p>Work experience: since 2014 I have been working as a software engineer and remote technician.</p>
+
+            </li>
+
+            <li>
+
+                <h2>Skills.</h2>
+
+                <ul>
+
+                    <li>Basic knowledge of programming languages(JavaScript)</li>
+
+                    <li>Strong mathematical foundation</li>
+
+                    <li>Engineering</li>
+
+                    <li>Google Sheets</li>
+
+                    <li>Microsoft Excel</li>
+
+                    <li>Asana</li>
+
+                    <li>ASIC's</li>
+
+                </ul>
+
+            <li>
+
+                <h2>Education.</h2>
+
+                <p>Lyceum No. 1 in Vitebsk.</p>
+
+                <p>St. Petersburg State Polytechnic University. Faculty of Technical Cybernetics.</p>
+
+                <p><a href="https://app.rs.school/certificate/r2khm27u">JS/FE 2020 Q3 (JAVASCRIPT)</a></p>
+
+                <p><a href="https://drive.google.com/file/u/1/d/1hvXqYbQ99zyDIg7asee5hJp_favlOP1x/view">Salesforce Developer Course</a></p>
+
+                <p><a href="https://trailblazer.me/id/rbashkirau">Famous Salesforce Expeditioner</a></p>
+
+                <p><a href="https://ocw.mit.edu/courses/15-s12-blockchain-and-money-fall-2018/pages/syllabus/">MIT: Blockchain And Money free online course</a></p>
+
+            </li>
+
+            <li>
+
+                <h2>English language</h2>
+
+                <p>Level <b>B2</b>.</p>
+
+            </li>
+
+        </ol>
+
+    </main>
+
+    <footer>
+
+        <p>
+
+            <a href="https://github.com/Rombas">Raman Bashkirau, 2022</a>
+
+            <a href="https://rs.school/js/"> <img class="logo" src="https://rs.school/images/rs_school_js.svg"/></a>
+
+        </p>
+
+    </footer>
+
 </body>
+
+
+
 </html>
